force-app/main/default/objects/Snapshot__c/Snapshot__c.object-meta.xml
<CustomObject>
    <description>All Snapshot</description>
    <label>Snapshot</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Reporting Snapshot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>