force-app/main/default/objects/Snapshot__c/fields/Account_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Team__c</fullName>
    <label>Account Owner Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business &amp; Government - Business - Ash</fullName>
            </value>
            <value>
                <fullName>Business &amp; Government - Business Development - Yosu</fullName>
            </value>
            <value>
                <fullName>Business &amp; Government - Government - Ash</fullName>
            </value>
            <value>
                <fullName>Business &amp; Government - National Manager - Development &amp; New Business - Yosu</fullName>
            </value>
            <value>
                <fullName>Business &amp; Government - New Business - Yosu</fullName>
            </value>
            <value>
                <fullName>Business &amp; Government - Resources (Darren) - Dean</fullName>
            </value>
            <value>
                <fullName>Business &amp; Government - Resources (Paul) - Dean</fullName>
            </value>
            <value>
                <fullName>Business &amp; Government - Resources (Tim) - Dean</fullName>
            </value>
            <value>
                <fullName>QIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>