force-app/main/default/objects/Snapshot__c/fields/App_Used__c.field-meta.xml
<CustomField>
    <fullName>App_Used__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>App Used</label>
    <type>TextArea</type>
</CustomField>