force-app/main/default/objects/Snapshot__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>