force-app/main/default/objects/Snapshot__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Snapshot (Case)</relationshipLabel>
    <relationshipName>Snapshot1</relationshipName>
    <type>Lookup</type>
</CustomField>