force-app/main/default/objects/Snapshot__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <description>Case Object - Case Origin</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>