force-app/main/default/objects/Snapshot__c/fields/Case_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner Role</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Snapshot1</relationshipName>
    <type>Lookup</type>
</CustomField>