force-app/main/default/objects/Snapshot__c/fields/Case_Record_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Record Type</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Snapshot</relationshipLabel>
    <relationshipName>Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>