force-app/main/default/objects/Snapshot__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <description>Case object - Case Record Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>