force-app/main/default/objects/Snapshot__c/fields/Expected_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Closure_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Closure Date</label>
    <type>Date</type>
</CustomField>