force-app/main/default/objects/Snapshot__c/fields/Frequent_Flyer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Tier__c</fullName>
    <description>Case Object - Frequent Flyer Tier</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequent Flyer Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>