force-app/main/default/objects/Snapshot__c/fields/GDS__c.field-meta.xml
<CustomField>
    <fullName>GDS__c</fullName>
    <description>Created for JIRA CRM-3811</description>
    <encryptionScheme>None</encryptionScheme>
    <label>GDS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>