force-app/main/default/objects/Snapshot__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Case Object - Group</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>