force-app/main/default/objects/Snapshot__c/fields/Incremental_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Revenue__c</fullName>
    <label>Incremental Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>