force-app/main/default/objects/Snapshot__c/fields/Number_of_Post__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Post__c</fullName>
    <label>Number of Post</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>