force-app/main/default/objects/Snapshot__c/fields/Original_SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>Original_SLA_Met__c</fullName>
    <description>Case Object - Original SLA Met</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Original SLA Met</label>
    <length>255</length>
    <type>Text</type>
</CustomField>