force-app/main/default/objects/Snapshot__c/fields/PCC__c.field-meta.xml
<CustomField>
    <fullName>PCC__c</fullName>
    <description>Created for JIRA CRM-3811</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PCC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>