force-app/main/default/objects/Snapshot__c/fields/QIC_ID__c.field-meta.xml
<CustomField>
    <fullName>QIC_ID__c</fullName>
    <description>Field created for JIRA CRM-3811.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QIC ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>