force-app/main/default/objects/Snapshot__c/fields/Reporting_Team_List__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Team_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Freight/ Reporting Team List</label>
    <length>100</length>
    <type>Text</type>
</CustomField>