force-app/main/default/objects/Snapshot__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>