force-app/main/default/objects/Snapshot__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identify</fullName>
                <color>#0B6FCE</color>
                <label>Identify</label>
            </value>
            <value>
                <fullName>Qualify</fullName>
                <color>#FF9966</color>
                <label>Qualify</label>
            </value>
            <value>
                <fullName>Propose &amp; Negotiate</fullName>
                <color>#660000</color>
                <label>Propose &amp; Negotiate</label>
            </value>
            <value>
                <fullName>Closed - Accepted</fullName>
                <color>#A845DC</color>
                <label>Closed - Accepted</label>
            </value>
            <value>
                <fullName>Closed - Not Accepted</fullName>
                <color>#F3D904</color>
                <label>Closed - Not Accepted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>