force-app/main/default/objects/Snapshot__c/fields/Sub_Type_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Level_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Type (Level 1)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>