force-app/main/default/objects/Snapshot__c/fields/Sub_Type_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Level_2__c</fullName>
    <label>Sub Type (Level 2)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Contract</fullName>
                <color>#E27001</color>
                <label>New Contract</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
                <color>#78C953</color>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>Non-Contractual Other</fullName>
            </value>
            <value>
                <fullName>Variation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>