force-app/main/default/objects/Snapshot__c/fields/Tier_Segmentation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Tier_Segmentation_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tier Segmentation Flag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>