force-app/main/default/objects/Snapshot__c/fields/Total_Market_Share_Declined__c.field-meta.xml
<CustomField>
    <fullName>Total_Market_Share_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Total Market Share Declined</label>
    <type>Checkbox</type>
</CustomField>