force-app/main/default/objects/Snapshot__c/fields/Total_Market_Share_YTD__c.field-meta.xml
<CustomField>
    <fullName>Total_Market_Share_YTD__c</fullName>
    <label>Total Market Share YTD</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>