force-app/main/default/objects/Snapshot__c/fields/User_Unique__c.field-meta.xml
<CustomField>
    <fullName>User_Unique__c</fullName>
    <label>User Unique</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>